--- a/index.html
+++ b/index.html
@@ -17,14 +17,17 @@
 
 	<div class="container">
 		<div class="quickadd">
-			<button class="button-block button" id="QuickAdd">+ Agregar</button>
+			<button class="button-block button" id="QuickAdd">+ Nuevo</button>
 		</div><!--.quickadd-->
 	</div>
 
-	<div class="container">
+	<div class="addbook container">
 		<div class="quickaddForm">
 			<div class="field-wrap">
 				<label for="fullname">Nombre</label><input type="text" id="fullname" class="formFields">
+			</div>
+			<div class="field-wrap">
+				<label for="phone">Telefono</label><input type="text" id="phone" class="formFields">
 			</div>
 			<div class="field-wrap">
 				<label for="phone">Telefono</label><input type="text" id="phone" class="formFields">
@@ -38,7 +41,7 @@
 			<div class="field-wrap">
 				<label for="email">Correo Electrónico</label><input type="text" id="email" class="formFields">
 			</div>
-				<button class="button-block button" id="Add">Agregar ahora</button>
+				<button class="button-block button" id="Add">Agregar</button>
 				<br><br>
 				<button class="button-block button" id="Cancel">Cancelar</button>
 			</div>
